<resources>
    <string name="app_name">AppParkinson</string>
    <string name="iniciar_ses">Log in</string>
    <string name="registrar_s">Sign up</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="showPassword">Show password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="logo">logo</string>
    <string name="registre_diari">Daily entry</string>
    <string name="doctor">Doctor</string>
    <string name="metge">doctor</string>
    <string name="go_back">Go back</string>
    <string name="explaining">PRESS AS MUCH AS YOU CAN IN THE CENTER OF THE CIRCLE</string>
    <string name="permisos">By clicking the continue button I authorize the capture of the data obtained during the AppParkinson’s daily entrys for the exclusive use of data analysis from the indicated doctor and the center Tecnocampus Mataró-Maresme, which is attached to the university Pompeu Fabra. \n \n \n I accept that all the information collected during the daily entrys are owned exclusively by the author of the testis, from which the application has arisen, and in this case as well, from the center Tecnocampus Mataró-Maresme.</string>
    <string name="okay">Okay</string>
    <string name="thanks">Thanks for the daily check-in, one last thing...</string>
    <string name="cont">Continue</string>
    <string name="feelings">How are you feeling today</string>
    <string name="validate">Validate</string>
    <string name="MoltB">Very good</string>
    <string name="Be">Fine</string>
    <string name="Millor">Better than yesterday</string>
    <string name="Malament">Bad</string>
    <string name="MMalament">Really bad</string>
    <string name="textEmail">The actual doctor\'s email is:</string>
    <string name="textNoEmail">You don\'t have any doctor assigned yet.</string>
    <string name="AuthFail">Authentication failed</string>
    <string name="exit">Exit</string>
    <string name="logout">Log out</string>
</resources>