<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".Login" >

        <View
            android:id="@+id/charcoal_wi"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo_white"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="328dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/email"
            android:hint="@string/email"
            android:drawableLeft="@drawable/user"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="328dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/email"
            android:hint="@string/password"
            android:drawableLeft="@drawable/pswd"
            android:inputType="textPassword"
            />

        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:text="@string/showPassword"
            android:textColor="@color/light_grey"
            android:buttonTint="@color/light_grey"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="330dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/register_button"
            android:textColor="@color/black"
            android:text="@string/iniciar_ses"/>


    </LinearLayout>
</ScrollView>