<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Doctor"
    >

    <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:clickable="true">

        <Button
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/go_back"
            android:scaleType="centerCrop"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/go_back"
            android:layout_width="208dp"
            android:layout_height="29dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/go_back"
            android:textAppearance="@style/go_back" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/email"
        android:hint="@string/email"
        android:drawableLeft="@drawable/dctor"
        />

    <Button
        android:id="@+id/validate"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/email"
        android:layout_alignRight="@id/email"
        android:background="@drawable/doctor_button"
        android:text="@string/validate"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        />


</RelativeLayout>